<resources>
    <string name="app_name" translatable="false">Lesson 4 </string>
    <string name="name_ex2">Exercise 2</string>
    <string name="name_ex3">Exercise 3</string>

    <!--BUTTON-->
    <string name="bt_Have_Fun" translatable="false">Have Fun</string>
    <string name="bt_Do_Sth" translatable="false">Do Something</string>
    <string name="bt_Click_Here" translatable="false">Click Here</string>
    <string name="bt_Surprise" translatable="false">Surprise</string>
    <string name="bt_Next" translatable="false">Next</string>

    <!--Description-->
    <string name="desc_img_vietnam_flag">Vietnammese</string>
    <string name="desc_img_japan_flag">Japanese</string>
    <string name="desc_img_laos_flag">Laos</string>
    <string name="desc_img_thailand_flag">Thailand</string>
    <string name="desc_img_uk_flag">English</string>
    <string name="desc_img_arab_flag">Arab</string>
</resources>
